Incrementing to version 1.2.2, minor help and readme updates

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = attr: searchf.__VERSION__
 description = A text-based application running in terminals to search into text files
 long_description = file: README.md
 long_description_content_type =	text/markdown
-keywords = search, file, curses
+keywords = search, file, terminal, console, highlighter, keyword, curses, utilities
 author = Adrien Felon
 url = https://github.com/human3/searchf
 license = Apache 2.0
