--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = searchf
-version = attr: searchf.__VERSION__
+version = attr: searchf.__version__
 description = A text-based application running in terminals to search into text files
 long_description = file: README.md
 long_description_content_type =	text/markdown
