Adding support for Windows

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,9 @@ url = https://github.com/human3/searchf
 license = Apache 2.0
 [options]
 packages = find:
+# For deps management see https://setuptools.pypa.io/en/latest/userguide/dependency_management.html
+install_requires =
+    windows-curses;platform_system=='Windows'
 [options.package_data]
 * = *.md, *.txt
 [options.entry_points]
