--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -38,5 +38,8 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    - name: Integration tests
+      run: |
+        python -m searchf.test.all
     - name: Build package
       run: python -m build
