--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,8 +27,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest build
+        python -m pip install flake8 pytest build mypy
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Type checks with mypy
+      run: |
+        mypy .
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
