Fix test entry point

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,4 +18,4 @@ install_requires =
 [options.entry_points]
 console_scripts:
     searchf=searchf.main:main
-    searchf-test=searchf.test.all:main
+    searchf-test=searchf.test.all:test_main
