--- a/.pylintrc
+++ b/.pylintrc
@@ -1,7 +1,7 @@
 [BASIC]
 max-args = 7
 min-public-methods = 1
-good-names = c, f, i, j, k, h, t, v, w, x, y, ev, ex, dc, sc, co, vc, rc
+good-names = a, c, e, f, i, j, k, h, p, s, t, v, w, x, y, ev, ex, dc, sc, co, vc, rc, fg, bg
 
 # E1101: Module 'curses' has no '_CursesWindow' member (no-member)
 generated-members = curses.*
