--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -40,6 +40,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        coverage -m pytest
+        python -m coverage run -m pytest searchf
+        python -m coverage report -m
     - name: Build package
       run: python -m build
