--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest build mypy
+        python -m pip install flake8 pytest pytest-cov build mypy
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Type checks with mypy
       run: |
@@ -40,6 +40,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest
+        python -m coverage run -m pytest searchf
+        python -m coverage report -m
     - name: Build package
       run: python -m build
