--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,10 @@
 [build-system]
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "searchf"
+description = "A text-based application running in terminals to search into text files"
+readme = "README.md"
+dynamic = ["version"]
+requires-python = ">=3.9"
